--- a/package.json
+++ b/package.json
@@ -21,15 +21,14 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-
     "axios": "^0.19.0",
-    "dotenv": "^8.0.0",
-
     "bootstrap": "^4.3.1",
-
+    "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mysql2": "^1.6.5",
+    "react-bootstrap": "^1.0.0-beta.11",
+    "react-router-dom": "^5.0.1",
     "sequelize": "^5.14.0"
   }
 }
