--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
