--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
