--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "sweetalert2": "^8.16.3",
+    "sweetalert2-react-content": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
