--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "mysql2": "^1.6.5",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-router-dom": "^5.0.1",
-    "sequelize": "^5.14.0"
+    "sequelize": "^5.14.0",
+    "sweetalert2": "^8.16.3",
+    "sweetalert2-react-content": "^1.1.0"
   }
 }
